--- a/Projects/Compare KP/run.ipynb
+++ b/Projects/Compare KP/run.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,22 +11,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file1 = 'KP 3.xlsx'  # Replace with your older file path\n",
-    "file2 = 'KP 4.xlsx'  # Replace with your updated file path"
+    "file1 = 'Monev.xlsx'  # Replace with your older file path\n",
+    "file2 = 'new.xlsx'  # Replace with your updated file path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_excel(file1, header=0)\n",
-    "df2 = pd.read_excel(file2, header=0)\n",
+    "df1 = pd.read_excel(file1, header=0, sheet_name=\"Worksheet (Backup)\")\n",
+    "df2 = pd.read_excel(file2, header=0, sheet_name=\"Worksheet\")\n",
     "\n",
     "trx_code_df1 = df1['Proposal No']\n",
     "trx_code_df2 = df2['Proposal No']"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
     "added_rows = df2[df2['Proposal No'].isin(new_trx_codes)]\n",
     "\n",
     "# Save the added rows to a new Excel file\n",
-    "added_rows.to_excel('res.xlsx', index=False)\n",
+    "added_rows.to_excel('added_rows.xlsx', index=False)\n",
     "\n",
     "print(\"Added rows based on 'Trx Code' saved to 'added_rows.xlsx'.\")"
    ]
