--- a/Projects/ST Automation/run.ipynb
+++ b/Projects/ST Automation/run.ipynb
@@ -22,6 +22,7 @@
    "outputs": [],
    "source": [
     "excel_path = \"Last.xlsx\"\n",
+    "csv_path = \"last2.csv\"\n",
     "data = pd.read_excel(excel_path, sheet_name = \"Last\")"
    ]
   },
@@ -40,8 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "indv_output_folder = \"output_letters/final/indv\"\n",
-    "team_output_folder = \"output_letters/final/team\"\n",
+    "indv_output_folder = \"output_letters/final2/indv\"\n",
+    "team_output_folder = \"output_letters/final2/team\"\n",
     "if not os.path.exists(indv_output_folder):\n",
     "    os.makedirs(indv_output_folder)\n",
     "    \n",
@@ -356,16 +357,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_data = pd.read_excel(excel_path, sheet_name = \"Sheet2\")"
+    "# team_data = pd.read_excel(excel_path, sheet_name = \"Sheet2\")\n",
+    "team_data = pd.read_csv(csv_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -402,10 +404,10 @@
        "      <th>Nomor Upload</th>\n",
        "      <th>Nomor ST</th>\n",
        "      <th>Nama Dosen PA</th>\n",
-       "      <th>NIDN Dosen</th>\n",
+       "      <th>NIDN Dosen PA</th>\n",
        "      <th>Proposal No</th>\n",
-       "      <th>NIS</th>\n",
-       "      <th>Nama</th>\n",
+       "      <th>NIM</th>\n",
+       "      <th>Nama Mahasiswa</th>\n",
        "      <th>Major</th>\n",
        "      <th>Faculty</th>\n",
        "      <th>...</th>\n",
@@ -428,17 +430,17 @@
        "      <td>NaN</td>\n",
        "      <td>0009C/UC-BMA/ST/II/2024</td>\n",
        "      <td>I Gusti Bagus Yosia Wiryakusuma</td>\n",
-       "      <td>0706039201</td>\n",
-       "      <td>UC-ECAP24070017</td>\n",
-       "      <td>106012310341</td>\n",
-       "      <td>Justin Stewart Sugiarto</td>\n",
+       "      <td>706039201</td>\n",
+       "      <td>UC-ECAP24040122</td>\n",
+       "      <td>106012210107</td>\n",
+       "      <td>Franz Jingga Theng</td>\n",
        "      <td>IBM</td>\n",
        "      <td>Fakultas Bisnis dan Manajemen</td>\n",
        "      <td>...</td>\n",
        "      <td>2023-2024 Even</td>\n",
        "      <td>External Regional</td>\n",
        "      <td>Team</td>\n",
-       "      <td>UKM</td>\n",
+       "      <td>Individu (Eksternal)</td>\n",
        "      <td>Non Akademik</td>\n",
        "      <td>Peserta Lomba/Kompetisi</td>\n",
        "      <td>4</td>\n",
@@ -452,17 +454,17 @@
        "      <td>NaN</td>\n",
        "      <td>0009C/UC-BMA/ST/II/2024</td>\n",
        "      <td>I Gusti Bagus Yosia Wiryakusuma</td>\n",
-       "      <td>0706039202</td>\n",
-       "      <td>UC-ECAP24070017</td>\n",
-       "      <td>206042310050</td>\n",
-       "      <td>Tiffany Grace Siamena</td>\n",
-       "      <td>VCD</td>\n",
-       "      <td>Fakultas Industri Kreatif</td>\n",
+       "      <td>706039202</td>\n",
+       "      <td>UC-ECAP24040122</td>\n",
+       "      <td>106012210105</td>\n",
+       "      <td>Jocelline Aarona Putricia</td>\n",
+       "      <td>IBM</td>\n",
+       "      <td>Fakultas Bisnis dan Manajemen</td>\n",
        "      <td>...</td>\n",
        "      <td>2023-2024 Even</td>\n",
        "      <td>External Regional</td>\n",
        "      <td>Team</td>\n",
-       "      <td>UKM</td>\n",
+       "      <td>Individu (Eksternal)</td>\n",
        "      <td>Non Akademik</td>\n",
        "      <td>Peserta Lomba/Kompetisi</td>\n",
        "      <td>4</td>\n",
@@ -474,22 +476,22 @@
        "      <th>2</th>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>00013C/UC-BMA/ST/III/2024</td>\n",
+       "      <td>0009C/UC-BMA/ST/II/2024</td>\n",
        "      <td>I Gusti Bagus Yosia Wiryakusuma</td>\n",
-       "      <td>0706039208</td>\n",
-       "      <td>UC-ECAP24120096</td>\n",
-       "      <td>106012110151</td>\n",
-       "      <td>Valentino Limbang Jaya</td>\n",
+       "      <td>706039204</td>\n",
+       "      <td>UC-ECAP24040122</td>\n",
+       "      <td>106012210104</td>\n",
+       "      <td>Marcellino</td>\n",
        "      <td>IBM</td>\n",
        "      <td>Fakultas Bisnis dan Manajemen</td>\n",
        "      <td>...</td>\n",
        "      <td>2023-2024 Even</td>\n",
-       "      <td>External National</td>\n",
+       "      <td>External Regional</td>\n",
        "      <td>Team</td>\n",
-       "      <td>Universitas</td>\n",
-       "      <td>Akademik</td>\n",
+       "      <td>Individu (Eksternal)</td>\n",
+       "      <td>Non Akademik</td>\n",
        "      <td>Peserta Lomba/Kompetisi</td>\n",
-       "      <td>10</td>\n",
+       "      <td>4</td>\n",
        "      <td>https://employee.uc.ac.id/index.php/file/get/s...</td>\n",
        "      <td>https://employee.uc.ac.id/index.php/file/get/s...</td>\n",
        "      <td>https://employee.uc.ac.id/index.php/file/get/s...</td>\n",
@@ -498,22 +500,22 @@
        "      <th>3</th>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>00013C/UC-BMA/ST/III/2024</td>\n",
+       "      <td>0009C/UC-BMA/ST/II/2024</td>\n",
        "      <td>I Gusti Bagus Yosia Wiryakusuma</td>\n",
-       "      <td>0706039209</td>\n",
-       "      <td>UC-ECAP24120096</td>\n",
-       "      <td>106012110008</td>\n",
-       "      <td>Deylan Jevon Gunawan</td>\n",
+       "      <td>706039205</td>\n",
+       "      <td>UC-ECAP24040122</td>\n",
+       "      <td>106012210293</td>\n",
+       "      <td>Jennifer Aurelia</td>\n",
        "      <td>IBM</td>\n",
        "      <td>Fakultas Bisnis dan Manajemen</td>\n",
        "      <td>...</td>\n",
        "      <td>2023-2024 Even</td>\n",
-       "      <td>External National</td>\n",
+       "      <td>External Regional</td>\n",
        "      <td>Team</td>\n",
-       "      <td>Universitas</td>\n",
-       "      <td>Akademik</td>\n",
+       "      <td>Individu (Eksternal)</td>\n",
+       "      <td>Non Akademik</td>\n",
        "      <td>Peserta Lomba/Kompetisi</td>\n",
-       "      <td>10</td>\n",
+       "      <td>4</td>\n",
        "      <td>https://employee.uc.ac.id/index.php/file/get/s...</td>\n",
        "      <td>https://employee.uc.ac.id/index.php/file/get/s...</td>\n",
        "      <td>https://employee.uc.ac.id/index.php/file/get/s...</td>\n",
@@ -522,22 +524,22 @@
        "      <th>4</th>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>00013C/UC-BMA/ST/III/2024</td>\n",
+       "      <td>0009C/UC-BMA/ST/II/2024</td>\n",
        "      <td>I Gusti Bagus Yosia Wiryakusuma</td>\n",
-       "      <td>0706039210</td>\n",
-       "      <td>UC-ECAP24120096</td>\n",
-       "      <td>106012110066</td>\n",
-       "      <td>Aurelia Sugita Tjandra</td>\n",
+       "      <td>706039206</td>\n",
+       "      <td>UC-ECAP24040122</td>\n",
+       "      <td>106012210106</td>\n",
+       "      <td>Andrew Wibisono</td>\n",
        "      <td>IBM</td>\n",
        "      <td>Fakultas Bisnis dan Manajemen</td>\n",
        "      <td>...</td>\n",
        "      <td>2023-2024 Even</td>\n",
-       "      <td>External National</td>\n",
+       "      <td>External Regional</td>\n",
        "      <td>Team</td>\n",
-       "      <td>Universitas</td>\n",
-       "      <td>Akademik</td>\n",
+       "      <td>Individu (Eksternal)</td>\n",
+       "      <td>Non Akademik</td>\n",
        "      <td>Peserta Lomba/Kompetisi</td>\n",
-       "      <td>10</td>\n",
+       "      <td>4</td>\n",
        "      <td>https://employee.uc.ac.id/index.php/file/get/s...</td>\n",
        "      <td>https://employee.uc.ac.id/index.php/file/get/s...</td>\n",
        "      <td>https://employee.uc.ac.id/index.php/file/get/s...</td>\n",
@@ -548,47 +550,47 @@
        "</div>"
       ],
       "text/plain": [
-       "   Upload  Nomor Upload                   Nomor ST  \\\n",
-       "0   False           NaN    0009C/UC-BMA/ST/II/2024   \n",
-       "1   False           NaN    0009C/UC-BMA/ST/II/2024   \n",
-       "2   False           NaN  00013C/UC-BMA/ST/III/2024   \n",
-       "3   False           NaN  00013C/UC-BMA/ST/III/2024   \n",
-       "4   False           NaN  00013C/UC-BMA/ST/III/2024   \n",
+       "   Upload  Nomor Upload                 Nomor ST  \\\n",
+       "0   False           NaN  0009C/UC-BMA/ST/II/2024   \n",
+       "1   False           NaN  0009C/UC-BMA/ST/II/2024   \n",
+       "2   False           NaN  0009C/UC-BMA/ST/II/2024   \n",
+       "3   False           NaN  0009C/UC-BMA/ST/II/2024   \n",
+       "4   False           NaN  0009C/UC-BMA/ST/II/2024   \n",
        "\n",
-       "                     Nama Dosen PA   NIDN Dosen      Proposal No  \\\n",
-       "0  I Gusti Bagus Yosia Wiryakusuma   0706039201  UC-ECAP24070017   \n",
-       "1  I Gusti Bagus Yosia Wiryakusuma   0706039202  UC-ECAP24070017   \n",
-       "2  I Gusti Bagus Yosia Wiryakusuma   0706039208  UC-ECAP24120096   \n",
-       "3  I Gusti Bagus Yosia Wiryakusuma   0706039209  UC-ECAP24120096   \n",
-       "4  I Gusti Bagus Yosia Wiryakusuma   0706039210  UC-ECAP24120096   \n",
+       "                     Nama Dosen PA  NIDN Dosen PA      Proposal No  \\\n",
+       "0  I Gusti Bagus Yosia Wiryakusuma      706039201  UC-ECAP24040122   \n",
+       "1  I Gusti Bagus Yosia Wiryakusuma      706039202  UC-ECAP24040122   \n",
+       "2  I Gusti Bagus Yosia Wiryakusuma      706039204  UC-ECAP24040122   \n",
+       "3  I Gusti Bagus Yosia Wiryakusuma      706039205  UC-ECAP24040122   \n",
+       "4  I Gusti Bagus Yosia Wiryakusuma      706039206  UC-ECAP24040122   \n",
        "\n",
-       "            NIS                     Nama Major                        Faculty  \\\n",
-       "0  106012310341  Justin Stewart Sugiarto   IBM  Fakultas Bisnis dan Manajemen   \n",
-       "1  206042310050    Tiffany Grace Siamena   VCD      Fakultas Industri Kreatif   \n",
-       "2  106012110151   Valentino Limbang Jaya   IBM  Fakultas Bisnis dan Manajemen   \n",
-       "3  106012110008     Deylan Jevon Gunawan   IBM  Fakultas Bisnis dan Manajemen   \n",
-       "4  106012110066   Aurelia Sugita Tjandra   IBM  Fakultas Bisnis dan Manajemen   \n",
+       "            NIM             Nama Mahasiswa Major  \\\n",
+       "0  106012210107         Franz Jingga Theng   IBM   \n",
+       "1  106012210105  Jocelline Aarona Putricia   IBM   \n",
+       "2  106012210104                 Marcellino   IBM   \n",
+       "3  106012210293           Jennifer Aurelia   IBM   \n",
+       "4  106012210106            Andrew Wibisono   IBM   \n",
        "\n",
-       "   ...         Periode              Scope Participant    Represent  \\\n",
-       "0  ...  2023-2024 Even  External Regional        Team          UKM   \n",
-       "1  ...  2023-2024 Even  External Regional        Team          UKM   \n",
-       "2  ...  2023-2024 Even  External National        Team  Universitas   \n",
-       "3  ...  2023-2024 Even  External National        Team  Universitas   \n",
-       "4  ...  2023-2024 Even  External National        Team  Universitas   \n",
+       "                         Faculty  ...         Periode              Scope  \\\n",
+       "0  Fakultas Bisnis dan Manajemen  ...  2023-2024 Even  External Regional   \n",
+       "1  Fakultas Bisnis dan Manajemen  ...  2023-2024 Even  External Regional   \n",
+       "2  Fakultas Bisnis dan Manajemen  ...  2023-2024 Even  External Regional   \n",
+       "3  Fakultas Bisnis dan Manajemen  ...  2023-2024 Even  External Regional   \n",
+       "4  Fakultas Bisnis dan Manajemen  ...  2023-2024 Even  External Regional   \n",
        "\n",
-       "       Category                   Status Credit Point  \\\n",
-       "0  Non Akademik  Peserta Lomba/Kompetisi            4   \n",
-       "1  Non Akademik  Peserta Lomba/Kompetisi            4   \n",
-       "2      Akademik  Peserta Lomba/Kompetisi           10   \n",
-       "3      Akademik  Peserta Lomba/Kompetisi           10   \n",
-       "4      Akademik  Peserta Lomba/Kompetisi           10   \n",
+       "   Participant             Represent      Category                   Status  \\\n",
+       "0         Team  Individu (Eksternal)  Non Akademik  Peserta Lomba/Kompetisi   \n",
+       "1         Team  Individu (Eksternal)  Non Akademik  Peserta Lomba/Kompetisi   \n",
+       "2         Team  Individu (Eksternal)  Non Akademik  Peserta Lomba/Kompetisi   \n",
+       "3         Team  Individu (Eksternal)  Non Akademik  Peserta Lomba/Kompetisi   \n",
+       "4         Team  Individu (Eksternal)  Non Akademik  Peserta Lomba/Kompetisi   \n",
        "\n",
-       "                                         Certificate  \\\n",
-       "0  https://employee.uc.ac.id/index.php/file/get/s...   \n",
-       "1  https://employee.uc.ac.id/index.php/file/get/s...   \n",
-       "2  https://employee.uc.ac.id/index.php/file/get/s...   \n",
-       "3  https://employee.uc.ac.id/index.php/file/get/s...   \n",
-       "4  https://employee.uc.ac.id/index.php/file/get/s...   \n",
+       "  Credit Point                                        Certificate  \\\n",
+       "0            4  https://employee.uc.ac.id/index.php/file/get/s...   \n",
+       "1            4  https://employee.uc.ac.id/index.php/file/get/s...   \n",
+       "2            4  https://employee.uc.ac.id/index.php/file/get/s...   \n",
+       "3            4  https://employee.uc.ac.id/index.php/file/get/s...   \n",
+       "4            4  https://employee.uc.ac.id/index.php/file/get/s...   \n",
        "\n",
        "                                   Assignment Letter  \\\n",
        "0  https://employee.uc.ac.id/index.php/file/get/s...   \n",
@@ -607,7 +609,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,43 +620,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Changed: 'Surabaya, 17 November 2024' to 'Surabaya, 03 Januari 2024'\n",
-      "Original Full Text: 'No. : 00097H/UC-SA/ST/XI/2024'\n",
+      "Changed: 'Surabaya, 03 September 2024' to 'Surabaya, 03 September 2024'\n",
+      "Original Full Text: 'No. : 0009C/UC-BMA/ST/II/2024'\n",
       "Processing Nomor ST: 0009C/UC-BMA/ST/II/2024\n",
       "Updated 'Nomor ST' to: 'No. : 0009C/UC-BMA/ST/II/2024'\n",
-      "Saving Word document to: output_letters/final/team/ST_Team_Justin Stewart Sugiarto (EH SPORT).docx\n",
-      "Word document saved to output_letters/final/team/ST_Team_Justin Stewart Sugiarto (EH SPORT).docx\n",
-      "Changed: 'Surabaya, 03 Januari 2024' to 'Surabaya, 19 Maret 2024'\n",
-      "Original Full Text: 'No. : 0009C/UC-BMA/ST/II/2024'\n",
-      "Processing Nomor ST: 00013C/UC-BMA/ST/III/2024\n",
-      "Updated 'Nomor ST' to: 'No. : 00013C/UC-BMA/ST/III/2024'\n",
-      "Saving Word document to: output_letters/final/team/ST_Team_Valentino Limbang Jaya (CESt Business Plan Competition).docx\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\hansj\\AppData\\Local\\Temp\\ipykernel_2780\\355801653.py:4: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
-      "  start_date = pd.to_datetime(row['Start Date'])\n",
-      "C:\\Users\\hansj\\AppData\\Local\\Temp\\ipykernel_2780\\355801653.py:5: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
-      "  end_date = pd.to_datetime(row['End Date'])\n",
-      "C:\\Users\\hansj\\AppData\\Local\\Temp\\ipykernel_2780\\414816676.py:3: UserWarning: Parsing dates in %d-%m-%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
-      "  start_date = pd.to_datetime(row['Start Date'])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Word document saved to output_letters/final/team/ST_Team_Valentino Limbang Jaya (CESt Business Plan Competition).docx\n"
+      "Saving Word document to: output_letters/final2/team/ST_Team_Franz Jingga Theng (EhSport).docx\n",
+      "Word document saved to output_letters/final2/team/ST_Team_Franz Jingga Theng (EhSport).docx\n"
      ]
     }
    ],
@@ -669,7 +647,7 @@
     "    \n",
     "    # Add lecturer information\n",
     "    lecturer_name = team_group.iloc[0]['Nama Dosen PA']\n",
-    "    lecturer_nidn = team_group.iloc[0]['NIDN Dosen']\n",
+    "    lecturer_nidn = team_group.iloc[0]['NIDN Dosen PA']\n",
     "    lecturer_row = table.add_row().cells\n",
     "    lecturer_row[0].text = \"1\"  # No\n",
     "    lecturer_row[1].text = lecturer_name  # Nama\n",
@@ -679,8 +657,8 @@
     "    for idx, member in enumerate(team_group.itertuples(), start=2):\n",
     "        student_row = table.add_row().cells\n",
     "        student_row[0].text = str(idx)\n",
-    "        student_row[1].text = getattr(member, \"Nama\", \"N/A\")\n",
-    "        student_row[2].text = str(getattr(member, \"NIS\", \"N/A\"))\n",
+    "        student_row[1].text = getattr(member, \"Nama Mahasiswa\", \"N/A\")\n",
+    "        student_row[2].text = str(getattr(member, \"NIM\", \"N/A\"))\n",
     "        student_row[3].text = getattr(member, \"Major\", \"N/A\")\n",
     "        \n",
     "    # student_name = row['Name']\n",
@@ -725,7 +703,7 @@
     "            print(f\"Updated 'Nomor ST' to: '{new_text}'\")\n",
     "\n",
     "    # Save the updated document\n",
-    "    first_member_name = team_group.iloc[0]['Nama']\n",
+    "    first_member_name = team_group.iloc[0]['Nama Mahasiswa']\n",
     "    sanitized_name = sanitize_filename(first_member_name)\n",
     "    sanitized_activity = sanitize_filename(activity)\n",
     "    team_output_path = f\"{team_output_folder}/ST_Team_{sanitized_name} ({sanitized_activity}).docx\"\n",
@@ -738,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -746,18 +724,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Grouping for Activity: EH! SPORT\n",
+      "Grouping for Activity: Eh!Sport\n",
       "Team Members:\n",
-      "                      Nama\n",
-      "0  Justin Stewart Sugiarto\n",
-      "1    Tiffany Grace Siamena\n",
-      "\n",
-      "Grouping for Activity: CESt Business Plan Competition\n",
-      "Team Members:\n",
-      "                     Nama\n",
-      "2  Valentino Limbang Jaya\n",
-      "3    Deylan Jevon Gunawan\n",
-      "4  Aurelia Sugita Tjandra\n"
+      "                 Nama Mahasiswa\n",
+      "0            Franz Jingga Theng\n",
+      "1     Jocelline Aarona Putricia\n",
+      "2                    Marcellino\n",
+      "3              Jennifer Aurelia\n",
+      "4               Andrew Wibisono\n",
+      "5  Michelle Angie Wangi Soputra\n"
      ]
     }
    ],
@@ -765,7 +740,7 @@
     "for (code, activity), team_group in grouped_teams:\n",
     "    print(f\"\\nGrouping for Activity: {activity}\")\n",
     "    print(\"Team Members:\")\n",
-    "    print(team_group[['Nama']])  # Display relevant columns"
+    "    print(team_group[['Nama Mahasiswa']])  # Display relevant columns"
    ]
   }
  ],
